# Baa

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  README_AR.md  ROADMAP.md  hello.baa  lexertodo.md  make_include_test.c  make_multifile_test.c  make_test.c  prompt.txt  prompt_docs.txt  setup.iss  test_error.b  test_suite.b
.github/workflows/: ci.yml  release-candidate.yml  stress-nightly.yml  trigger-wiki-sync.yml
.trae/rules/: project_rules.md
bench/: README.md  compile_cfg_big.baa  compile_many_funcs.baa  runtime_branch_switch.baa  runtime_calls.baa  runtime_loop_arith.baa
docs/: API_REFERENCE.md  BAA0_SPEC.md  BAA_BOOK_AR.md  BAA_IR_SPECIFICATION.md  BOOTSTRAP_CONTRACT.md  CODE_REVIEW_CHECKLIST.md  COMPATIBILITY_MATRIX.md  COMPONENT_OWNERSHIP.md  CONFORMANCE_SUITE.md  CONTRACT_FREEZE_V0_5.md  DIAGNOSTICS_JSON_SCHEMA.md  DOCUMENTATION_STRUCTURE_PLAN.md  DOCUMENTATION_UPDATE_SUMMARY.md  DOC_SYNC_PROTOCOL.md  ECOSYSTEM_BOUNDARIES.md  EDITOR_ROADMAP.md  INTERNALS.md  IR_DEVELOPER_GUIDE.md  KNOWN_LIMITATIONS.md  LANGUAGE.md  MIGRATION_ARTIFACT_AUDIT.md  MIXED_HARNESS.md  NAVIGATION.md  PERFORMANCE.md  PHASE_4_5_HANDOFF.md  PREPROCESSOR_ERROR_RECOVERY.md  PREPROCESSOR_ROADMAP.md  RELEASE_CANDIDATE_STATUS.md  RELEASE_PROCESS.md  SDK_RELEASE_PLAN.md  SELF_HOSTING_PILOT_REPORT.md  STAGE0_BOOTSTRAP_MANIFEST.md  STAGE0_TOOLCHAIN_MANIFEST.json  STRUCTURE_IMPLEMENTATION_SUMMARY.md  STYLE_GUIDE.md  TARGET_SPECIFICATION.md  TOOLING_CONTRACTS.md  TUTORIALS_AR.md  USER_GUIDE.md  index.md  (+6 more)
docs/00_OVERVIEW/: CURRENT_STATUS.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md
docs/00_نظرة_عامة/: البداية_السريعة.md  دليل_التوثيق.md
docs/01_LANGUAGE_SPECIFICATION/: ARABIC_FEATURES.md  C_COMPARISON.md  LANGUAGE_OVERVIEW.md  SYNTAX_REFERENCE.md  TUTORIAL.md
docs/01_مواصفات_اللغة/: الميزات_العربية.md  مرجع_النحو.md  نظرة_عامة_على_اللغة.md
docs/02_COMPILER_ARCHITECTURE/: ARCHITECTURE_OVERVIEW.md  AST.md  CODE_GENERATION.md  LEXER.md  PARSER.md  PREPROCESSOR.md  SEMANTIC_ANALYSIS.md  VISUAL_OVERVIEW.md
docs/02_معمارية_المترجم/: المحلل_اللفظي.md  المعالج_المسبق.md  نظرة_عامة_على_المعمارية.md
docs/03_DEVELOPMENT/: CONTRIBUTING.md
docs/04_ROADMAP/: AST_ROADMAP.md  CMAKE_ROADMAP.md  Development_Progress.md  LEXER_ROADMAP.md  LLVM_CODEGEN_ROADMAP.md  Lexer_Todo.md  PARSER_ROADMAP.md  PREPROCESSOR_ROADMAP.md  ROADMAP.md  ROADMAP_OVERVIEW.md  SEMANTIC_ANALYSIS_ROADMAP.md  Test_Suite_Roadmap.md
docs/05_API_REFERENCE/: AST_API.md  CODEGEN_API.md  LEXER_API.md  PREPROCESSOR_API.md
docs/05_مرجع_واجهة_البرمجة/: واجهة_المعالج_المسبق.md
docs/06_EXAMPLES/: README.md  arabic_showcase.baa  control_flow.baa  functions.baa  hello_world.baa  variables.baa
docs/_navigation/: index.md  index_ar.md  index_en.md
docs/_templates/: bilingual_header.md  doc_template_ar.md  doc_template_en.md
docs/ar/: ملخص_الحالة_الحالية.md  مواصفات_اللغة.md
examples/: README.md  error_handling_demo.baa  file_copy_small.baa  hello_world.baa  math_and_format.baa
scripts/: bench.py  check_build_profiles.py  check_incremental_build.py  check_module_sizes.py  check_reference_compiler_policy.py  check_reproducibility.py  check_version_sync.py  ci_prepare_bootstrap.py  extract_docs_corpus.py  module_size_allowlist.txt  package_linux.sh  prepare_gcc_bundle.ps1  qa_asm_legality.py  qa_bootstrap_gate.py  qa_mixed_harness.py  qa_parser_harness.py  qa_parser_parity.py  qa_phase45_handoff.py  qa_run.py  qa_selfhost_pilot.py  qa_stage0_manifest.py  test_build_maturity.py  test_determinism.py
src/: analysis.c  analysis_builtins.c  analysis_format.c  analysis_infer_expr.c  analysis_scope.c  analysis_semantic_utils.c  analysis_types.c  analysis_visit.c  baa.h  baa.rc  code_model.h  codegen.c  compiler.c  driver.h  driver_cli.c  driver_cli.h  driver_pipeline.c  driver_pipeline.h  driver_time.c  driver_time.h  driver_toolchain.c  driver_toolchain.h  emit.c  emit.h  emit_data_section.c  emit_frame.c  emit_module_driver.c  emit_support.c  error.c  ir.c  ir.h  ir_analysis.c  ir_arena.c  ir_arena.h  ir_builder.c  ir_builder.h  ir_canon.c  ir_cfg_simplify.c  ir_cfg_simplify.h  ir_clone.c  (+84 more)
src/backend/: backend_internal.h  emit.c  emit.h  emit_data_section.c  emit_frame.c  emit_inst_body_a.inc  emit_inst_body_b.inc  emit_inst_body_c.inc  emit_module_driver.c  emit_support.c  isel.c  isel.h  isel_arith.c  isel_control.c  isel_driver.c  isel_memory.c  isel_misc.c  regalloc.c  regalloc.h  regalloc_driver.c  regalloc_rewrite.c  target.c  target.h
src/codegen/: CMakeLists.txt  codegen.c  llvm_codegen.c  llvm_stub.c
src/driver/: driver.h  driver_build.c  driver_build.h  driver_cli.c  driver_cli.h  driver_internal.h  driver_pipeline.c  driver_pipeline.h  driver_time.c  driver_time.h  driver_toolchain.c  main.c  process.c  process.h
src/frontend/: analysis.baahd  analysis.c  analysis.h  analysis_builtins.c  analysis_format.c  analysis_infer_expr.c  analysis_scope.c  analysis_semantic_utils.c  analysis_types.c  analysis_visit.c  ast.baahd  ast.h  ast_dump.c  ast_dump.h  (+22 more)
stdlib/: baalib.baa  baalib.baahd
targets/: i386-elf.experimental.json  i386-pyramidos.experimental.json  x86_64-linux.json  x86_64-windows.json
tests/: README.md  backend_array_sum_test.baa  backend_enum_struct_test.baa  backend_inline_test.baa  backend_int_semantics_test.baa  backend_mod_test.baa  backend_regalloc_stress.baa  backend_scope_test.baa  backend_sysv_6args_test.baa  backend_tailcall_test.baa  backend_test.baa  backend_test.s  backend_test_inc.baahd  backend_union_test.baa  emit_stack_protector_test.c  ir_analysis_test.c  ir_constfold_test.c  ir_copyprop_test.c  ir_cse_test.c  ir_data_layout_test.c  ir_dce_test.c  ir_gvn_test.c  ir_inline_test.c  ir_instcombine_test.c  ir_licm_test.c  ir_loop_test.c  ir_mem2reg_phi_test.c  ir_mem2reg_promote_test.c  ir_mem2reg_test.c  ir_outssa_test.c  ir_printer.baa  ir_sccp_test.c  ir_serialize_test.c  ir_test.baa  ir_test.ir  ir_test.s  ir_unroll_test.c  ir_verify_ir_test.c  ir_verify_ssa_test.c  isel_callargs_reject_test.c  (+11 more)
tools/: baa_preprocessor_tester.c
(+330 files in other folders)
